--- a/requirements.txt
+++ b/requirements.txt
@@ -5,23 +5,24 @@ Flask-Cache==0.13.1
 Flask-Login==0.2.11
 Flask-Mail==0.9.0
 Flask-Principal==0.4.0
+Flask-SQLAlchemy==1.0
 Flask-Script==2.0.5
 Flask-Security==1.7.3
 Flask-WTF==0.9.5
 Jinja2==2.7.3
 MarkupSafe==0.23
+SQLAlchemy==0.9.6
 WTForms==1.0.5
 Werkzeug==0.9.6
 blinker==1.3
 cssmin==0.2.0
 flake8==2.2.1
-flask-mongoengine==0.7.0
 gunicorn==19.0.0
 itsdangerous==0.24
 mccabe==0.2.1
-mongoengine==0.8.7
 passlib==1.6.2
 pep8==1.5.7
 pyflakes==0.8.1
-pymongo==2.7.1
 webassets==0.10.1
+wsgiref==0.1.2
+
