Added pagination to todo retrieval

--- a/flask_application/config.py.sample
+++ b/flask_application/config.py.sample
@@ -18,6 +18,7 @@ class Config(object):
 
         # SQLAlchemy support
         self.SQLALCHEMY_DATABASE_URI = 'sqlite://'
+        self.DB_QUERY_LIMIT = 20
 
         # Configured for Gmail
         self.DEFAULT_MAIL_SENDER = 'Admin < username@example.com >'
