--- a/flask_application/config.py.sample
+++ b/flask_application/config.py.sample
@@ -18,7 +18,7 @@ class Config(object):
 
         # SQLAlchemy support
         self.SQLALCHEMY_DATABASE_URI = 'sqlite://'
-        self.DB_QUERY_LIMIT = 20
+        self.DB_MAX_PAGE_SIZE = 20
 
         # Configured for Gmail
         self.DEFAULT_MAIL_SENDER = 'Admin < username@example.com >'
