--- a/flask_application/config.py.sample
+++ b/flask_application/config.py.sample
@@ -40,7 +40,7 @@ class Config(object):
         self.SECURITY_PASSWORD_SALT = '2b8b74efc58e489e879810905b6b6d4dc6'
 
         self.SECURITY_CONFIRMABLE = True
-        self.SECURITY_LOGIN_WITHOUT_CONFIRMATION = False
+        self.SECURITY_CHANGEABLE = True
 
         # CACHE
         self.CACHE_TYPE = 'simple'
