--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,11 @@ Flask-Cache==0.13.1
 Flask-Login==0.2.11
 Flask-Mail==0.9.0
 Flask-Principal==0.4.0
+Flask-RESTful==0.2.12
 Flask-SQLAlchemy==1.0
 Flask-Script==2.0.5
 Flask-Security==1.7.3
+Flask-Testing==0.4.2
 Flask-WTF==0.9.5
 Jinja2==2.7.3
 MarkupSafe==0.23
@@ -20,9 +22,10 @@ flake8==2.2.1
 gunicorn==19.1.0
 itsdangerous==0.24
 mccabe==0.2.1
+nose==1.3.4
 passlib==1.6.2
 pep8==1.5.7
 pyflakes==0.8.1
 webassets==0.10.1
 wsgiref==0.1.2
-Flask-RESTful==0.2.12
+
