Made error message for incorrect username & password the same (to prevent malicious attackers to find out the problem), and Added no username and no password scenarios

--- a/flask_application/config.py.sample
+++ b/flask_application/config.py.sample
@@ -43,6 +43,9 @@ class Config(object):
         self.SECURITY_CONFIRMABLE = True
         self.SECURITY_CHANGEABLE = True
 
+        self.SECURITY_MSG_USER_DOES_NOT_EXIST = 'Incorrect Username or Password'
+        self.SECURITY_MSG_INVALID_PASSWORD    = 'Incorrect Username or Password'
+
         # CACHE
         self.CACHE_TYPE = 'simple'
 
